// we need to tell the compiler which version we're using
syntax = "proto3";

package registry;

import "google/protobuf/empty.proto";
// here we define the service and methods we're going to use later on
// to do the registration process
service Registry {
  rpc Register (Registration) returns (RegisterResponse);
  
  rpc Unregister (Registration) returns (RegisterResponse);

  rpc fetchServiceLocation (google.protobuf.Empty) returns (RegistrationList);
}
// we define what a registration needs to have
// all optional and self explanatory
message Registration {
  string name = 1;
  string ipv4 = 2;
  string port = 3;
}
// a list/array of registrations
message RegistrationList {
  repeated Registration registrations = 1;
}

// simple response when you sign up
message RegisterResponse {
  string message = 1;
}



